# MTFPSR

./: README.md
prog02/birch/: Cargo.toml
prog02/birch/assets/: 00_example_02.bir  00_example_03.bir  00_example_09.bir  00_example_16.bir  15_cmds_cmd_00.bir  15_cmds_cmd_01.bir  15_cmds_cmd_02.bir  15_cmds_cmd_04.bir  15_cmds_cmd_05.bir  15_cmds_cmd_06.bir  15_cmds_cmd_07.bir  15_cmds_cmd_08.bir  15_cmds_cmd_09.bir  15_cmds_cmd_10.bir  15_cmds_cmd_11.bir  16_exec_cmd_01.bir  16_exec_cmd_02.bir  16_exec_cmd_03.bir  16_exec_cmd_04.bir  16_exec_cmd_05.bir  16_exec_cmd_06.bir  16_exec_cmd_07.bir  16_exec_cmd_08.bir  16_exec_cmd_09.bir  16_exec_cmd_10.bir  16_exec_cmd_11.bir  16_exec_cmd_12.bir  16_exec_cmd_13.bir  16_exec_cmd_14.bir  16_exec_cmd_15.bir  16_exec_cmd_16.bir  16_exec_cmd_17.bir  16_exec_cmd_19.bir  16_exec_cmd_21.bir  16_exec_cmd_22.bir  16_exec_cmd_23.bir  20_misc_02.bir  20_misc_03.bir  20_misc_04.bir  20_misc_05.bir  (+101 more)
prog02/birch/src/: lib.rs  main.rs  tests.rs
prog03/jumpin/: Cargo.toml
prog03/jumpin/assets/: badinput01.soln.txt  badinput02.soln.txt  badinput02.txt  badinput03.soln.txt  badinput03.txt  badinput04.soln.txt  badinput04.txt  badinput05.soln.txt  badinput05.txt  badinput06.soln.txt  badinput06.txt  badinput07.soln.txt  badinput07.txt  badinput08.soln.txt  badinput08.txt  badinput09.soln.txt  badinput09.txt  badinput10.soln.txt  badinput10.txt  badinput11.soln.txt  badinput11.txt  badinput12.soln.txt  badinput12.txt  badinput13.soln.txt  badinput13.txt  badinput14.soln.txt  badinput14.txt  badinput15.soln.txt  badinput15.txt  badinput16.soln.txt  badinput16.txt  badinput17.soln.txt  badinput17.txt  badinput18.soln.txt  badinput18.txt  badinput19.soln.txt  badinput19.txt  expert25.soln.txt  expert25.txt  expert26.soln.txt  (+45 more)
prog03/jumpin/assets/btc/: expert25.mt.btc.z  expert26.mt.btc.z  (+70 more)
prog03/jumpin/src/: lib.rs  main.rs  tests.rs
prog04/correct/: Cargo.toml
prog04/correct/assets/: big_model.btc.z
prog04/correct/src/: lib.rs  load.rs  main.rs  save.rs  tests.rs
prog05/eca/: Cargo.toml
prog05/eca/src/: main.rs  par.rs  seq.rs
prog06/rps/: Cargo.toml
prog06/rps/src/: lib.rs  main.rs  test.rs
(+112 files in other folders)
