[package]
name = "birch"
version = "0.1.0"
description = "Birch interpreter"
authors = ["Matthew Fluet <matthew.fluet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "birch"

[dependencies]
stats_alloc = "0.1.8"
clap = { version = "3.0.10", features = ["derive"]}