[package]
name = "jumpin"
version = "0.1.0"
authors = ["Matthew Fluet <matthew.fluet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "jumpin"

[dependencies]
bincode = "1.3"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
puzzle = { path = "../puzzle" }
