[package]
name = "correct"
version = "0.1.0"
description = "Statistical spelling correction"
authors = ["Matthew Fluet <matthew.fluet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "correct"

[dependencies]
stats_alloc = "0.1.8"
clap = { version = "3.0.14", features = ["derive"]}
triemap = { path = "../triemap" }
