
[package]
name = "rps"
version = "0.1.0"
description = "Rock-Paper-Scissors Game Server"
authors = ["Matthew Fluet <matthew.fluet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11"
clap = { version = "3.1", features = ["cargo", "derive"] }
env_logger = "0.9"
futures = "0.3"
log = "0.4"
rand = "0.8"
thiserror = "1.0"
